goat counter and markdown

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
   <link rel="stylesheet" href="styles.css">
   <meta http-equiv="refresh" content="300"> <!-- Auto-refresh every 5 minutes -->
   <script src="text-scramble.js" defer></script>
+  <script data-goatcounter="https://pasilunch.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 </head>
 <body>
   <!-- Hero Section with Background Video -->
